# Changelog

// Template:
////
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁🐛🧽🗑️
|
| https://github.com/knative/client/pull/[#]

|===
////


## v0.13.0 (unreleased)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add human readable `kn route describe`
| https://github.com/knative/client/pull/643[#643]

| 🐛
| Show envFrom when running describe service or revision
| https://github.com/knative/client/pull/630[#630]

| 🎁
| Add E2E test for `kn source binding` commands
| https://github.com/knative/client/pull/634[#634]

| 🎁
| Add `--cmd` and `--arg` for customization of container entrypoint
| https://github.com/knative/client/pull/635[#635]

| 🧽
| Add `no-wait` instead of `--async` and deprecate it
| https://github.com/knative/client/pull/639[#639]

| 🧽
| Refactor service `create_test.go` and `update_test.go` to
| remove unecessary `sync` parameter in setup call
| https://github.com/knative/client/pull/656[#656]

| 🐛
| Fix `--image` flag to only allow single occurence
| https://github.com/knative/client/pull/647[#647]

## v0.12.0 (2020-01-29)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add `kn source binding` CRUD support for managing sink bindings
| https://github.com/knative/client/pull/625[#625]

| 🎁
| Update to Knative eventing v0.12.0
| https://github.com/knative/client/pull/621[#621]

| 🧽️
| Update to Knative serving v0.12.0
| https://github.com/knative/client/pull/618[#618]

| 🎁
| Add `--pull-secret` for specifying pull secrets
| https://github.com/knative/client/pull/617[#617]

| 🧽
| Improve error handling when no command is given
| https://github.com/knative/client/pull/615[#615]

| 🎁
| Add `--autoscale-window` for service commands
| https://github.com/knative/client/pull/614[#614]

| 🧽
| Add checks for namespace creation instead of waiting
| https://github.com/knative/client/pull/611[#611]

| 🐛
| Fix mandatory `kn trigger` filter